--- a/client/k8s.css
+++ b/client/k8s.css
@@ -102,8 +102,7 @@ div.tooltip {
     padding-top: 60px;
 }
 
-.sidenav p, .sidenav a {
-    padding: 8px 8px 8px 32px;
+.sidenav > * {
     text-decoration: none;
     font-size: 1em;
     color: #818181;
@@ -111,14 +110,24 @@ div.tooltip {
     transition: 0.4s;
 }
 
-.sidenav a:hover {
+.sidenav p {
+    padding: 8px 8px 8px 32px;
+}
+
+.sidenav div:hover {
     color: #f1f1f1;
 }
 
 .sidenav .closebtn {
     position: absolute;
     top: 0;
-    right: 25px;
+    left: 5px;
     font-size: 36px;
-    margin-left: 50px;
+
+}
+
+.navIcon {
+    font-size: 30px;
+    cursor:pointer;
+    position: fixed;
 }
