--- a/client/k8s.hbs
+++ b/client/k8s.hbs
@@ -8,7 +8,7 @@
 
 <body>
 <div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <div class="closebtn" onclick="closeNav()">&times;</div>
     <p>
         <input type="checkbox" onclick="toggleStickyObjects()">
         <span>Sticky objects</span>
@@ -27,7 +27,7 @@
     </p>
 </div>
 
-<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+<span class="navIcon" onclick="openNav()">&#9776;</span>
 <svg id="wrapper" width="100%" height="98%"></svg>
 
 <script src="/socket.io/socket.io.js"></script>
